# py-mem-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/py_mem_mcp/: __init__.py  bundesland.py  config.py  graphs.py  server.py  sparql.py
src/py_mem_mcp/tools/: __init__.py  lehrplan.py  listing.py  query.py  search.py
tests/: __init__.py  test_bundesland.py  test_config.py  test_graphs.py  test_sparql.py  test_tools.py
