[project]
name = "py-mem-mcp"
version = "0.1.0"
description = "A Python implementation of the MEM ontology MCP server"
authors = [
    {name = "Volker Goehler", email = "volker.goehler@informatik.tu-freiberg.de"}
]
license = "CC0-1.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp (>=3)",
    "httpx (>=0.28)",
    "python-dotenv (>=1.0)"
]
packages = [{include = "py_mem_mcp", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
poethepoet = "^0.40.0"

[tool.poetry.scripts]
py-mem-mcp = "py_mem_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
